--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&family=Montserrat:ital,wght@0,300;0,400;0,500;1,500&display=swap"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
